--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="header-highlight"></div>
-    <header>Kalkulator BMI</header>
+    <header id="header" onclick="changeHeader()">Kalkulator BMI</header>
     <form id="calculator">
         <div class="input-wrapper"><input type="number" placeholder="Podaj wagę (kg)" step="any" min="0" name="weight" id="weight" /></div>
         <div class="input-wrapper"><input type="number" placeholder="Podaj wysokość (cm)" step="any" min="0" name="height" id="height" /></div>
