--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="header-highlight"></div>
     <header id="header" onclick="changeHeader()">Kalkulator BMI</header>
     <form id="calculator">
-        <div class="input-wrapper"><input type="number" placeholder="Podaj wagę (kg)" step="any" min="0" name="weight" id="weight" /></div>
-        <div class="input-wrapper"><input type="number" placeholder="Podaj wysokość (cm)" step="any" min="0" name="height" id="height" /></div>
+        <div class="input-wrapper"><input type="number" min="0" placeholder="Podaj wagę (kg)" step="any" min="0" name="weight" id="weight" /></div>
+        <div class="input-wrapper"><input type="number" min="1" placeholder="Podaj wysokość (cm)" step="any" min="0" name="height" id="height" /></div>
         <input type="button" value="Oblicz" onclick="buttonOnClick()" />
     </form>
 
